# satisfactory-game-stats

./: .gitignore  LICENSE  README.md  parse.py  pyproject.toml
ficsit/: utils.py
